# pd_entrega_2_store_sales_v1

./: .gitignore  LICENSE  Makefile  README.md  champion_summary.json  dvc.yaml  exit  pyproject.toml
data/interim/: proc_data_test.csv  proc_data_train.csv
data/raw/: stores_sales_forecasting_updated_v3.1.csv  stores_sales_forecasting_updated_v3.1.json
mlruns/0/: meta.yaml
mlruns/507424209113317466/: meta.yaml
mlruns/507424209113317466/01f2facfa18d41a98df20095042e4d3c/: meta.yaml
mlruns/507424209113317466/0516ede4bc394b6f8aa2c021265d55c7/: meta.yaml
mlruns/507424209113317466/1140b0c027f0442c81f2cc0e9f9f255a/: meta.yaml
mlruns/507424209113317466/17f3bd267e8545a7882c0979989335cf/: meta.yaml
mlruns/507424209113317466/1b14ea9ce42142a4be1e8ad97a6553e8/: meta.yaml
mlruns/507424209113317466/1e89df1de42b40f1931a84e2436a9f05/: meta.yaml
mlruns/630105506877034741/: meta.yaml
mlruns/897420715429005166/: meta.yaml
models/: stores_sales_forecasting_data_pre_proc.pkl
notebooks/: 00_scratchpad.ipynb  01_exploratory_data_analysis.ipynb  02_feature_exploration.ipynb  03_feature_creation.ipynb  04_model_training.ipynb  04_model_training_n_tunning.ipynb  05_inference_calculation.ipynb
prod-project_pd_entrega2/: app.py  feature_eng_creation.py  inference_calculation.py  model_training.py  operators.py
results/: predicciones_20251121_200600.csv  predicciones_20251219_202026.csv
utils/: BK_03_feature_creation.ipynb  BK_04_model_training_n_tunning.ipynb  BK_app.py  BK_feature_eng_creation.py  BK_inference_calculation.py  bk_operators.py
(+928 files in other folders)
